--- a/js-fundamentals/05_data_types/index.html
+++ b/js-fundamentals/05_data_types/index.html
@@ -8,8 +8,44 @@
 <body>
     <script>
 
-        let counter = 0;
-        let message = "Hello World";
+/*         let x = 99999999999999999999n;
+        console.log(x);
+        console.log(typeof x); */
+
+/*         var y = "It's alright!";
+        var z = 'His name is "Johnny"';
+        console.log(y);
+        console.log(typeof y);
+        console.log(z);
+        console.log(typeof z); */
+
+/*         var c = 5==5;
+        console.log(c);
+        console.log(typeof c); */
+
+/*         var d;
+        console.log(d);
+        console.log(typeof d); */
+
+/*         var e = null;
+        console.log(e);
+        console.log(typeof e); */
+
+/*         const ID = Symbol();
+        console.log(typeof ID); */
+
+/*         var make = "Honda";
+        var model = "S2000";
+        var color = "black";
+        var engineDisplacement = 1997; */
+
+/*         var car = { make : "Honda", model : "S2000", color : "black", engineDisplacement : 1997 };
+        console.log(car); */
+
+        var f = 42;
+        console.log(typeof f);
+        f = "some text";
+        console.log(typeof f);
 
     </script>
 </body>
