--- a/js-fundamentals/06_operators/index.html
+++ b/js-fundamentals/06_operators/index.html
@@ -26,10 +26,59 @@
         console.log(x);
         console.log(y); */
 
-        let x = 45;
+        /* let x = 45;
         let y = ++x;
         console.log(x);
-        console.log(y);
+        console.log(y); */
+
+        //let x = 45 == 45; //true
+        //let x = 45 === 45; //true
+        //let x = "45" === 45; //false
+        //let x = "45" == 45; //true
+
+        //let x = 45 != 45; //false
+        //let x = 45 !== 45; //false
+
+        //let x = 46 < 45; //false
+        //let x = 46 > 45; //true
+        //let x = 46 >= 45; //true
+        //let x = 46 <= 45; //false
+
+        //let x = 3 < '13'; //true
+        //let x = '' == 0; //true
+        //let x = 3 < 'Ben'; //false
+        
+        //let x = false == 0; //true
+        //let x = false === 0; //false
+        //let x = false == '0'; //true
+
+        //let x = null == undefined; //true
+        //let x = null === undefined; //true
+
+        //let x = "some text" == "some text"; //true
+        //let x = "3" > "13"; //true zbog poređenja teksta 3 i 1 
+
+        //let x = (12 > 11) && (5 > 1); //true
+        //let x = (true) && (true); //true
+
+        //let x = true || true; //true
+        //let x = true || false; //true
+        //let x = false || true; //true
+        //let x = false || false; //false
+
+        //let x = true; //true
+        //let x = !true; //false
+
+        
+        //ternarni operator
+/*         let age = 16;
+        let x = (age < 18) ? "You can't enter" : "Welcome";
+ */
+
+        let txt1 = "Java";
+        let txt2 = "Script";
+        let txt3 = txt1 + txt2; //konkatenacija
+     console.log(txt3);
 
     </script>
 </body>
