--- a/js-fundamentals/assignment_01/index.html
+++ b/js-fundamentals/assignment_01/index.html
@@ -10,7 +10,7 @@
         var H = prompt("Unesite vrijednost visine valjka");
         const PI = 3.14159;
         var V = (Math.pow(parseInt(r), 2)) * parseInt(H) * PI;  
-        alert("Zapremina valjka je: " + V)
+        alert("Zapremina valjka je: " + V);
     </script>
 </body>
 </html>
