--- a/js-fundamentals/07_functions_intro/index.html
+++ b/js-fundamentals/07_functions_intro/index.html
@@ -8,13 +8,13 @@
 <body>
     <script>
 
-        function calculateRectArea(a, b){
+/*         function calculateRectArea(a=0, b=0){
             console.log(a);
             console.log(b);
             return a*b;
         }
         var result = calculateRectArea();
-        console.log(result);
+        console.log(result); */
 
 /*         function sayHello(name){
             console.log("Hello" + name);
@@ -25,6 +25,20 @@
             console.log("Hello World!");
         }
         sayHelloWorld(); */
+
+/*         function myFunction(...arguments){
+            console.log(arguments);
+        }
+
+        myFunction(1,2,3,4);
+        myFunction(1,2,3);
+        myFunction(1,2); */
+
+        console.log("Hello World!");
+        document.write("Hello World!");
+
+        lex = parseInt("45");
+
     </script>
 </body>
 </html>
