--- a/js-fundamentals/09_functions_advanced/index.html
+++ b/js-fundamentals/09_functions_advanced/index.html
@@ -22,7 +22,7 @@
         console.log("Result is: " + result);
         console.log("a = " + a); */
 
-        function calculateRectArea(theObject) {
+/*         function calculateRectArea(theObject) {
             var result = theObject.numberA * theObject.numberB;
             theObject.numberA = 30;
             return result;
@@ -33,7 +33,28 @@
         var result = calculateRectArea(rectangle);
 
         console.log("Result is: " + result);
-        console.log("a = " + rectangle.numberA);
+        console.log("a = " + rectangle.numberA); */
+
+/*         var x = 4;
+
+        function myFunction() {
+            var y = 5;
+            console.log(y);
+        }
+        myFunction();
+
+        console.log(x); */
+
+        //hoisting se odnosi i na funkcije
+/*         console.log(myFunction(6));
+
+        function myFunction(x) {
+            return x * x;
+        }
+ */
+
+        
+
 
     </script>
 </body>
