--- a/js-fundamentals/10_js_numbers/index.html
+++ b/js-fundamentals/10_js_numbers/index.html
@@ -1,15 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Numbers</title>
 </head>
+
 <body>
     <script>
 
+        /* var x = 10;
+        var y = -338;
+        var z = 0; */
+
+        //var x = 56.00;
+
+        /* var y =  154e5;
+        console.log(y); */
+
+        /* var x = 0xff;
+        console.log(x); */
+
+        /* var x = 0312;
+        console.log(x); */
+
+        // Nan 0 / 0
+        // Infinity 5 / 0
+        // -Infinity -5 / 0
         
+        /* var x = -5 / 0;
+        console.log(x); */
+
+        //tip number precizno kontrolise brojeve do 15 cifara. dodati n za big int
+        /* var x = 9999999999999999n;
+        console.log(x); */
+
+        /* var x = 0.1;
+        var y = 0.2;
+        var z = (x * 10 + y * 10) / 10;
+        console.log(z); */
+
+        //console.log(Math.PI);
+
+        /* var x = Math.round(5.5);
+        console.log(x); */
+
+        /* var x = Math.ceil(4.2);
+        console.log(x);
+        var y = Math.floor(4.2);
+        console.log(y); */
+
+        //korjenovanje
+        /* var z = Math.sqrt(16);
+        console.log(z); */
+
+        //stepenovanje
+        /* var x = Math.pow(4, 2);
+        console.log(x); */
+
+        /* var x = Math.abs(-200);
+        console.log(x); */
+
+        /* var x = Math.sign(-200);
+        console.log(x); */
+
+        /* var x = Number.MAX_SAFE_INTEGER;
+        console.log(x); */
+
+        /* var x = 123.5512;
+        console.log(x.toFixed(1)); */
+
+        /* var x = parseInt("13", 10);
+        console.log(x); */
+
+        var x = parseFloat("3.14");
+        console.log(x);
 
     </script>
 </body>
+
 </html>
