--- a/js-fundamentals/11_js_strings/index.html
+++ b/js-fundamentals/11_js_strings/index.html
@@ -39,8 +39,14 @@
         /* var x = "Hello World";
         console.log(x.substring(6)); */
 
-        var x = "some text this is something maybe a little bit more text";
-        console.log(x.length);
-    </script>
+        /* var sometext = "The IndexOf() method returns the position of the first occurences of a specific";
+        console.log(sometext.indexOf("method")); */
+
+        var someText = "       Hello World!      ";
+        console.log(someText.trim());
+        console.log(someText.trimStart());
+        console.log(someText.trimEnd());
+
+</script>
 </body>
 </html>
