--- a/js-fundamentals/12_conditionals/index.html
+++ b/js-fundamentals/12_conditionals/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Conditionals</title>
 </head>
+
 <body>
-    
+    <script>
+
+        /* var speed = 90;
+
+        if (speed < 10) {
+            console.log("Too slow...");
+        } else if (speed <= 80) {
+            console.log("Regular speed.")
+        } else if (speed < 100) {
+            console.log("Too fast.")
+        } else {
+            console.log("Incorect value.")
+        } */
+
+/*         var x = 3;
+
+        switch (x) {
+
+            case 0:
+                console.log("Zero");
+                break;
+            case 1:
+                console.log("One");
+                break;
+            case 2:
+            case 3:
+                console.log("Two or Three");
+                break;
+            default:
+                console.log("unknown value");
+                break;
+        } */
+
+
+       
+        /* var message = (age < 18) ? "You can't enter" : "Welcome" ;
+        console.log(message); */
+        var age = 18;
+        var message;
+        if (age < 18) {
+            message = "You can't enter!";
+        } else { 
+            message = "Welcome!";
+        }
+        console.log(message);
+    </script>
 </body>
+
 </html>
