--- a/js-fundamentals/15_arrays_intro/intro.html
+++ b/js-fundamentals/15_arrays_intro/intro.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to Javascript Arrays</title>
 </head>
+
 <body>
-    
+    <script>
+
+        //let car = "Ford";
+        //let cars1 = new Array("Ford", "Mazda");
+
+        /* let cars = [ "Ford", "Mazda", "Toyota", "Acura" ];
+        cars.sort();
+        console.log(cars.toString()); */
+
+        //cars[1] = "BMW";
+        //cars[2] = "Honda";
+        //console.log(cars[2]);
+        //console.log(cars.length);    
+        //console.log(cars.toString());    
+        
+        /* var numbers = [1, 2, 55, 23, 0, 11, 123, -33];
+        numbers.sort(compareNumbers);
+        console.log(numbers.toString());
+
+        function compareNumbers(a, b){
+            return a - b;
+        } */
+
+        /* let cars = [ "Ford", "Mazda" ];
+        cars.push("Honda");
+        cars.unshift("Toyota");
+        cars.pop();
+        cars.shift();
+        console.log(cars.toString()); */
+
+        /* let cars = [ "Ford", "Mazda" ];
+        let pos = cars.indexOf("Mazda");
+        console.log(pos); */
+
+
+    </script>
 </body>
+
 </html>
