--- a/js-fundamentals/15_arrays_intro/intro.html
+++ b/js-fundamentals/15_arrays_intro/intro.html
@@ -42,6 +42,28 @@
         let pos = cars.indexOf("Mazda");
         console.log(pos); */
 
+        let cars = [ "Honda" , "Toyota", "Acura" ];
+
+        cars.forEach(writeCar);
+
+        function writeCar(item, index, array) {
+            console.log(index+ ": " + item);
+        }
+
+        /* for(let car of cars) {
+            console.log(car);
+        } */
+
+        /* for(let property in cars) {
+            console.log(cars[property]);
+        } */
+
+        /* for(let i = 0; i < cars.length; i++) {
+            console.log(cars[i]);
+        } */
+
+
+
 
     </script>
 </body>
