--- a/js-fundamentals/19_js_testing/index.html
+++ b/js-fundamentals/19_js_testing/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <script src="js/scripts.js"></script>
     <script>
 
         var number_a = prompt("Please enter first number:");
@@ -28,22 +29,7 @@
                 break;
         }
 
-        
-        function compare(a, b) {
-            number_a = parseInt(a);
-            number_b = parseInt(b);
-
-            if (number_a > number_b) {
-                return 1;
-            } else if (number_b > number_a) {
-                return -1;
-            } else {
-                return 0;
-            }
-        }
-
-
-        function testCompare(){
+        /* function testCompare(){
 
             let fail = false;
 
@@ -57,7 +43,7 @@
             } else { 
                 console.log("Everything is OK.")
             }
-        }
+        } */
 
     </script>
 </body>
