--- a/js-fundamentals/19_js_testing/jasmine/SpecRunner.html
+++ b/js-fundamentals/19_js_testing/jasmine/SpecRunner.html
@@ -14,12 +14,14 @@
   <script src="lib/jasmine-5.0.0-beta.0/boot1.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
+  <script src="../js/scripts.js"></script>
+  <!-- <script src="src/Player.js"></script>
+  <script src="src/Song.js"></script> -->
 
   <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
+  <script src="../tests/tests.js"></script>  
+  <!-- <script src="spec/SpecHelper.js"></script>
+  <script src="spec/PlayerSpec.js"></script> -->
 
 </head>
 
