--- a/4. advanced-css/07_css_transitions_and_animation/transitions/index.html
+++ b/4. advanced-css/07_css_transitions_and_animation/transitions/index.html
@@ -15,12 +15,12 @@
             width: 250px;
             height: 180px;
             border-radius: 8px;
-            transition: width 1s, height 1.5s;
+            transition: width 2s, height 1.5s;
         }
 
         .box:hover {
             width: 320px;
-            height: 220px
+            height: 220px;
         }
     </style>
 </head>
