--- a/4. advanced-css/08_gradients/index.html
+++ b/4. advanced-css/08_gradients/index.html
@@ -13,8 +13,7 @@
         }
 
         #box-1 {
-
-            background: radial-gradient(at top, red, blue );
+            background: radial-gradient(at top, green , black);
             border-radius: 50%;
 
             animation-name: eye-animation;
@@ -26,15 +25,15 @@
 
         @keyframes eye-animation {
             25% {
-                background: radial-gradient(at right, red, blue );
+                background: radial-gradient(at right, green, black );
             }
 
             50% {
-                background: radial-gradient(at bottom, red, blue );
+                background: radial-gradient(at bottom, green, black );
             }
 
             75% {
-                background: radial-gradient(at left, red, blue );
+                background: radial-gradient(at left, green, black );
             }
 
         }
