--- a/4. advanced-css/16_responsive_images/_index.html
+++ b/4. advanced-css/16_responsive_images/_index.html
@@ -1,23 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
         #hero {
-            width: 50%;
+            width: 600px;
             height: 400px;
-            background-image: url("16_responsive_images/tokyo-2048w.jpg");
+            background-image: url("tokyo-2048w.jpg");
             background-size: contain;
             background-repeat: no-repeat;
-        }   
-        @media screen and (max-width: 1024px){
-            background-image:url("16_respon")
+        }
+
+        @media screen and (max-width: 1024px) {
+            #hero {
+                background-image: url("tokyo-1024w.jpg");
+            }
+        }
+        @media screen and (max-width: 768px) {
+            #hero {
+                background-image: url("tokyo-768w.jpg");
+            }
+        }
+        @media screen and (max-width: 414px) {
+            #hero {
+                background-image: url("tokyo-414w.jpg");
+            }
+        }
+        @media screen and (min-resolution: 2dppx) and (max-width: 414px) {
+            #hero {
+                background-image: url("tokyo-414w@2.jpg");
+            }
+        }
+        @media screen and (min-resolution: 3dppx) and (max-width: 414px) {
+            #hero {
+                background-image: url("tokyo-414w@3.jpg");
+            }
         }
     </style>
 </head>
+
 <body>
     <div id="hero"></div>
 </body>
+
 </html>
