--- a/4. advanced-css/16_responsive_images/_index.html
+++ b/4. advanced-css/16_responsive_images/_index.html
@@ -6,44 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #hero {
-            width: 600px;
-            height: 400px;
-            background-image: url("tokyo-2048w.jpg");
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-
-        @media screen and (max-width: 1024px) {
-            #hero {
-                background-image: url("tokyo-1024w.jpg");
-            }
-        }
-        @media screen and (max-width: 768px) {
-            #hero {
-                background-image: url("tokyo-768w.jpg");
-            }
-        }
-        @media screen and (max-width: 414px) {
-            #hero {
-                background-image: url("tokyo-414w.jpg");
-            }
-        }
-        @media screen and (min-resolution: 2dppx) and (max-width: 414px) {
-            #hero {
-                background-image: url("tokyo-414w@2.jpg");
-            }
-        }
-        @media screen and (min-resolution: 3dppx) and (max-width: 414px) {
-            #hero {
-                background-image: url("tokyo-414w@3.jpg");
-            }
+        img {
+            width: 100%;
         }
     </style>
 </head>
 
 <body>
-    <div id="hero"></div>
+    <img srcset="tokyo-414w.jpg 414w,
+                 tokyo-768w.jpg 768w,
+                 tokyo-1024w.jpg 1024w,
+                 tokyo-2048w.jpg 2048w" 
+         sizes="(max-width: 414px) 414px,
+                (max-width: 768px) 768px,
+                (max-width: 1024px) 1024px,
+                1280px" 
+        src="tokyo-1024w.jpg" alt="Tokyo Neon Lights">
 </body>
 
 </html>
