--- a/4. advanced-css/16_responsive_images/index.html
+++ b/4. advanced-css/16_responsive_images/index.html
@@ -10,7 +10,7 @@
                 width: 100%;
             }
 
-            #hero {
+/*             #hero {
                 width: 600px;
                 height: 400px;
                 background-image: url("tokyo-2048w.jpg");
@@ -46,13 +46,13 @@
                 #hero {
                     background-image: url("tokyo-414w@3.jpg");
                 }
-            }
+            } */
         </style>
     </head>
 
     <body>
 
-        <!--<img srcset="tokyo-414w.jpg 414w,
+        <!-- <img srcset="tokyo-414w.jpg 414w,
                      tokyo-768w.jpg 768w,
                      tokyo-1024w.jpg 1024w,
                      tokyo-2048w.jpg 2048w"
@@ -60,15 +60,15 @@
                     (max-width: 768px) 768px,
                     (max-width: 1024px) 1024px,
                     1280px"
-             src="tokyo-1024w.jpg" alt="Tokyo Neon Lights">-->
+             src="tokyo-1024w.jpg" alt="Tokyo Neon Lights"> -->
 
 
 
 
-        <!--<img srcset="tokyo-414w.jpg,
-                         tokyo-828w.jpg 2x,
-                         tokyo-1242w.jpg 3x"
-                 src="tokyo-828w.jpg" alt="Tokyo Neon Lights">-->
+        <!-- <img srcset="tokyo-414w.jpg,
+                     tokyo-828w.jpg 2x,
+                     tokyo-1242w.jpg 3x"
+                src="tokyo-828w.jpg" alt="Tokyo Neon Lights"> -->
 
         <picture>
             <source srcset="tokyo-414w.jpg" media="(max-width: 414px)">
