--- a/_index.html
+++ b/_index.html
@@ -15,7 +15,7 @@
 
         h1 {
             margin: 0px;
-            transform: translate(80px);
+            transform: translateY(80px);
         }
 
         #intro-section {
