--- a/_index.html
+++ b/_index.html
@@ -13,9 +13,13 @@
             color: white;
         }
 
-        h1 {
+        /* h1 {
             margin: 0px;
-            transform: translateY(80px);
+        } */
+
+        ul {
+            padding: 0;
+            list-style-type: none;
         }
 
         #intro-section {
@@ -31,6 +35,82 @@
             background-color: #5D7586;
             position: relative;
         }
+
+        #back-button-arrow {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: fixed;
+            box-sizing: border-box;
+            width: 30px;
+            height: 30px;
+            margin-left: 5px;
+            border: 2px solid #ffffff;
+            border-radius: 100%;
+            cursor: pointer;
+            animation: bouncex 2s infinite running;
+        }
+
+        #back-button-arrow:hover {
+            animation-play-state: paused;
+        }
+
+        #back-button-arrow::before {
+            content: '';
+            position: absolute; 
+            box-sizing: border-box;
+            width: 50%;
+            height: 50%;
+            border-left: 2px solid #fff;
+            border-bottom: 2px solid #fff;
+            transform: rotate(45deg); 
+            left: 30%;
+        }
+
+        #back-button-solid {
+            top: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: fixed;
+            box-sizing: border-box;
+            width: 30px;
+            height: 30px;
+            margin-left: 5px;
+            border: 2px solid #ffffff;
+            border-radius: 100%;
+            cursor: pointer;
+            animation: bouncex 2s infinite running;
+        }
+
+        #back-button-solid:hover {
+            animation-play-state: paused;
+        }
+
+        #back-button-solid::before {
+            content: '';
+            position: absolute; 
+            box-sizing: border-box;           
+            border-left: 7px solid transparent;
+            border-right: 7px solid transparent;
+            border-bottom: 14px solid #fff;
+            transform: rotate(-90deg);
+            left: 17%;
+        }
+
+            /* back-button- testing code */
+            /* background-color: aqua; */
+            /* border: 2px solid rgb(172, 0, 0); */
+            /* border-radius: 100%; */
+         
+            /* top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%); */
+
+             /* width: 26px;
+            height: 26px; */
+            /* width: 13px;
+            height: 13px; */
 
         #scroll-down-arrow {
             position: absolute;
@@ -112,16 +192,57 @@
                 transform: translateY(-3px);
             }
         }
+
+        @keyframes bouncex {
+
+            0%,
+            20%,
+            50%,
+            80%,
+            100% {
+                transform: translate(0);
+            }
+
+            40% {
+                transform: translate(-5px);
+            }
+
+            60% {
+                transform: translate(-3px);
+            }
+        }
     </style>
 </head>
 
 <body>
+
     <div id="intro-section">
-        <h1>Section 1</h1>
+        <!-- <div class="back-arrow-container">
+            <div class="back-arrow"><a href="index.html"></a></div>
+        </div> -->
+
+        <div id="back-button-arrow"><a href="index.html"></a></div>
+        
+        <div id="back-button-solid"><a href="index.html"></a></div>
+
+        <h1>ITAcademy Introduction to Frontend Javascript Development</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet adipisci modi temporibus! Necessitatibus fuga,
+            delectus laudantium est veniam quas voluptatibus molestiae! Laudantium, illo quia quas maiores consequuntur
+            repellendus? Enim, earum.</p>
+        <br>
         <a id="scroll-down-arrow" href="#next-section"></a>
     </div>
+
     <div id="next-section">
-        <h1>Section 2</h1>
+        <h2>Coding with:</h2>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+        </ul>
+        <h2>Programming Language:</h2>
+        <ul>
+            <li>Javascript</li>
+        </ul>
         <a id="scroll-up-arrow" href="#intro-section"></a>
     </div>
 </body>
