--- a/index.html
+++ b/index.html
@@ -4,45 +4,232 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elegantna Back Arrow</title>
+    <title>2D Animation - Scroll Down and Up Arrow</title>
     <style>
         body {
-            font-family: sans-serif;
             margin: 0;
             font-family: sans-serif;
             text-align: center;
             color: white;
+        }
 
-            margin: 0;
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            margin: 0px auto;
+        }
+
+        ul {
+            padding: 0;
+            list-style-type: none;
+        }
+
+        #intro-section {
+            width: 100%;
             height: 100vh;
+            background-color: #914E67;
+            position: relative;
+        }
+
+        #next-section {
+            width: 100%;
+            height: 100vh;
+            background-color: #5D7586;
+            position: relative;
+        }
+
+        #back-button-arrow {
+            z-index: 1000;
+            
             display: flex;
-            flex-direction: column;
-            justify-content: center;
             align-items: center;
-            background-color: #050210;
-        }
-
-        .back-arrow-container {
-            width: 25px;
-            height: 25px;
+            justify-content: center;
+            position: fixed;
+            box-sizing: border-box;
+            width: 30px;
+            height: 30px;
+            margin-top: 5px;
+            margin-left: 5px;
+            border: 2px solid #ffffff;
+            border-radius: 100%;
             cursor: pointer;
+            animation: bouncex 2s infinite running;
         }
 
-        .back-arrow {
-            width: 0;
-            height: 0;
-            border-left: 10px solid transparent;
-            border-right: 10px solid transparent;
-            border-bottom: 20px solid white;
+        #back-button-arrow:hover {
+            animation-play-state: paused;
+        }
+
+        #back-button-arrow::before {
+            content: '';
+            position: absolute;
+            box-sizing: border-box;
+            width: 50%;
+            height: 50%;
+            border-left: 2px solid #fff;
+            border-bottom: 2px solid #fff;
+            transform: rotate(45deg);
+            left: 30%;
+        }
+
+        #back-button-solid {
+            top: 50px;
+            z-index: 1000;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: fixed;
+            box-sizing: border-box;
+            width: 30px;
+            height: 30px;
+            margin-top: 5px;
+            margin-left: 5px;
+            border: 2px solid #ffffff;
+            border-radius: 100%;
+            cursor: pointer;
+            animation: bouncex 2s infinite running;
+        }
+
+        #back-button-solid:hover {
+            animation-play-state: paused;
+        }
+
+        #back-button-solid::before {
+            content: '';
+            position: absolute;
+            box-sizing: border-box;
+            border-left: 7px solid transparent;
+            border-right: 7px solid transparent;
+            border-bottom: 14px solid #fff;
             transform: rotate(-90deg);
+            left: 17%;
+        }
+
+        /* back-button- testing code */
+        /* background-color: aqua; */
+        /* border: 2px solid rgb(172, 0, 0); */
+        /* border-radius: 100%; */
+
+        /* top: 50%; left: 50%; transform: translate(-50%, -50%); */
+        /* width: 26px; height: 26px; */
+        /* width: 13px; height: 13px; */
+
+        #scroll-down-arrow {
+            position: absolute;
+            bottom: 24px;
+            width: 46px;
+            height: 46px;
+            margin: 0 auto;
+            left: 0;
+            right: 0;
+            border: 2px solid #fff;
+            border-radius: 100%;
+            animation: bounce 2s infinite running;
+        }
+
+        #scroll-down-arrow:hover {
+            animation-play-state: paused;
+        }
+
+        #scroll-down-arrow::before {
+            position: absolute;
+            content: '';
+            width: 16px;
+            height: 16px;
+            left: 0px;
+            right: 0px;
+            top: 10px;
+            margin: 0 auto;
+            border-left: 2px solid #fff;
+            border-bottom: 2px solid #fff;
+            transform: rotate(-45deg);
+        }
+
+        #scroll-up-arrow {
+            position: absolute;
+            bottom: 24px;
+            width: 46px;
+            height: 46px;
+            margin: 0 auto;
+            left: 0;
+            right: 0;
+            border: 2px solid #fff;
+            border-radius: 100%;
+            animation: bounce 2s infinite running;
+        }
+
+        #scroll-up-arrow:hover {
+            animation-play-state: paused;
+        }
+
+        #scroll-up-arrow::before {
+            position: absolute;
+            content: '';
+            width: 16px;
+            height: 16px;
+            left: 0;
+            right: 0;
+            top: 15px;
+            margin: 0 auto;
+            border-right: 2px solid #FFF;
+            border-top: 2px solid #FFF;
+            transform: rotate(-45deg);
+        }
+
+        @keyframes bounce {
+
+            0%,
+            20%,
+            50%,
+            80%,
+            100% {
+                transform: translateY(0);
+            }
+
+            40% {
+                transform: translateY(-5px);
+            }
+
+            60% {
+                transform: translateY(-3px);
+            }
+        }
+
+        @keyframes bouncex {
+
+            0%,
+            20%,
+            50%,
+            80%,
+            100% {
+                transform: translate(0);
+            }
+
+            40% {
+                transform: translate(-5px);
+            }
+
+            60% {
+                transform: translate(-3px);
+            }
         }
     </style>
 </head>
 
 <body>
+
+
     <div id="intro-section">
-        <h1>Section 1</h1>
-        <h1>ITAcademy Introduction to Frontend Javscript Development</h1>
+
+        <div id="back-button-solid"><a href="index.html"></a></div>
+
+        <div id="back-button-arrow"><a href="index.html"></a></div>
+
+        <h1>ITAcademy Introduction to Frontend Javascript Development</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet adipisci modi temporibus! Necessitatibus fuga,
             delectus laudantium est veniam quas voluptatibus molestiae! Laudantium, illo quia quas maiores consequuntur
             repellendus? Enim, earum.</p>
@@ -51,7 +238,6 @@
     </div>
 
     <div id="next-section">
-        <h1>Section 2</h1>
         <h2>Coding with:</h2>
         <ul>
             <li>HTML</li>
@@ -62,12 +248,6 @@
             <li>Javascript</li>
         </ul>
         <a id="scroll-up-arrow" href="#intro-section"></a>
-    </div>
-
-    <div class="back-arrow-container">
-        <div class="back-arrow">
-            <a href="index.html"></a>
-        </div>
     </div>
 </body>
 
