--- a/4. advanced-css/simple and fast arrow buttons/index.html
+++ b/4. advanced-css/simple and fast arrow buttons/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>simple & fast arrow buttons</title>
+    <title>simple and fast arrow buttons</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
