--- a/4. advanced-css/19_flexbox_items/flexbox_layout_example/index.html
+++ b/4. advanced-css/19_flexbox_items/flexbox_layout_example/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
 
 <head>
     <title>Flexbox Layout Demo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
         body {
             margin: 0;
@@ -90,7 +94,7 @@
                 fermentum fermentum, sapien dui pharetra felis, in dictum arcu urna in nibh. Aliquam pulvinar
                 pellentesque nisl, pharetra ultricies mauris auctor vel. Aliquam erat volutpat. Vestibulum suscipit ut
                 ligula finibus semper. In hac habitasse platea dictumst. Fusce ante nisi, auctor vel fermentum sed,
-            tincidunt non ex. </p>
+                tincidunt non ex. </p>
         </div>
         <aside class="aside" id="aside-2">
             <h2>Aside 2</h2>
