santa hat button

--- a/4-advanced-css/santa-hat-button/index.html
+++ b/4-advanced-css/santa-hat-button/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Santa Hat Button</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
     <button class="button" type="button">
         Christmas button
-        <img src="https://assets.codepen.io/4175254/santa-hat-test-9.png" alt="">
+        <img class="button-hat" src="https://assets.codepen.io/4175254/santa-hat-test-9.png" alt="">
     </button>
+
+    <canvas class="canvas"></canvas>
+    <script src="script.js"></script>
 </body>
 
 </html>
