--- a/4-advanced-css/20_css_grid_basics/index.html
+++ b/4-advanced-css/20_css_grid_basics/index.html
@@ -8,6 +8,11 @@
         <style>
             #grid1 {
                 display: grid;
+                grid-template-columns: repeat(3 , minmax(120px, auto));
+                grid-auto-rows: minmax(120px, auto);
+                /* column-gap: 8px; */
+                /* row-gap: 16px; */
+                gap: 16px;
             }
         </style>
     </head>
