--- a/4-advanced-css/21_css_grid_configuration/_index.html
+++ b/4-advanced-css/21_css_grid_configuration/_index.html
@@ -21,6 +21,7 @@
                 height: 120px;
                 background-color: blueviolet;
                 color: white;
+                font-size: 5rem;
                 text-align: center;
                 line-height: 120px;
                 /* grid-column-start: 2; */
